feat: endpoint implementation get-games-id-turns
